--- a/standard.css
+++ b/standard.css
@@ -36,7 +36,7 @@ footer {
     height: 100px;
     box-shadow: 0px -4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
-    justify-content: flex-end;
+    justify-content:center;
     align-items: center;
 }
 
