--- a/style.css
+++ b/style.css
@@ -11,3 +11,22 @@ footer {
 .copyright {
     font-size: 1.2rem;
 }
+
+main {
+    margin-top: 300px;
+    flex-direction: column;
+}
+
+input {
+    height: 40px;
+    margin-bottom: 20px;
+    border-radius: 5px;
+}
+
+button {
+    height: 40px;
+    background-color: rgb(234, 234, 18);
+    font-size: 1.2rem;
+    border-radius: 20px;
+    border: solid 2px black;
+}
