--- a/style.css
+++ b/style.css
@@ -29,4 +29,5 @@ button {
     font-size: 1.2rem;
     border-radius: 20px;
     border: solid 2px black;
+    background-color: rgb(166, 159, 159);
 }
