--- a/standard.css
+++ b/standard.css
@@ -26,7 +26,7 @@ header {
 
 
 main {
-    min-height: calc(100vh - 100px);
+    height: calc(100vh - 300px);
     display: flex;
     justify-content: flex-start;
 }
