--- a/standard.css
+++ b/standard.css
@@ -26,7 +26,7 @@ header {
 
 
 main {
-    height: calc(100vh - 300px);
+    height: calc(100vh - 400px);
     display: flex;
     justify-content: flex-start;
 }
@@ -38,6 +38,7 @@ footer {
     display: flex;
     justify-content:center;
     align-items: center;
+    z-index: 1000;
 }
 
 a {
